Fixed issue with scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+    scrollbar-gutter: stable
+}
+
 .table-header {
     margin: 0;
 }
